<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loading_animation_linearlayout"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loading_animation_header_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/connecting"/>

    <ProgressBar
        android:id="@+id/loading_animation_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"/>

    <TextView
        android:id="@+id/loading_animation_update_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp"
        tools:text="@string/network" />

    <Button
        android:id="@+id/loading_animation_try_again"
        android:background="@drawable/tag"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableStart="@drawable/ic_replay_black_24dp"
        android:drawablePadding="16dp"
        android:drawableTint="@color/colorMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/try_again"
        android:textColor="@color/colorMain"
        android:visibility="invisible"/>

</LinearLayout>