<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCollationActivity">

    <LinearLayout
        android:id="@+id/create_collation_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/create_collation_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:fontFamily="@font/oswald_regular"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    tools:text="@string/welcome"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:fontFamily="@font/oswald_light"
                    android:text="@string/create_collation_subtitle"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/choose_subposting"
                        android:fontFamily="@font/oswald_light"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>

                    <Spinner
                        android:id="@+id/create_collation_sub_posting"
                        android:background="@drawable/spinner_drawable_flat"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:spinnerMode="dropdown"
                        android:layout_marginBottom="16dp"
                        android:elevation="1dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/oswald_light"
                        android:text="@string/choose_question_type"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>

                    <Spinner
                        android:id="@+id/create_collation_question_type"
                        android:background="@drawable/spinner_drawable_flat"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginBottom="16dp"
                        android:spinnerMode="dropdown"
                        android:elevation="1dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/oswald_light"
                        android:text="@string/set"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>

                    <Spinner
                        android:id="@+id/create_collation_group"
                        android:background="@drawable/spinner_drawable_flat"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginBottom="16dp"
                        android:spinnerMode="dropdown"
                        android:elevation="1dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/oswald_light"
                        android:text="@string/group"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>

                    <Spinner
                        android:id="@+id/create_collation_set"
                        android:background="@drawable/spinner_drawable_flat"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginBottom="16dp"
                        android:spinnerMode="dropdown"
                        android:elevation="1dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/oswald_light"
                        android:text="@string/set_test_duration"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/create_collation_time_number"
                            android:background="@drawable/spinner_drawable_flat"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:layout_marginEnd="8dp"
                            android:inputType="number"
                            android:fontFamily="@font/oswald_regular"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:hint="@string/test_duration" />

                        <Spinner
                            android:id="@+id/create_collation_time_unit"
                            android:background="@drawable/spinner_drawable_flat"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:spinnerMode="dropdown"
                            android:elevation="1dp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/oswald_light"
                        android:text="@string/set_exam_time"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimary" />

                    <LinearLayout
                        android:id="@+id/create_collation_exam_time"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/create_collation_time_hour"
                            android:background="@drawable/spinner_drawable_flat"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:padding="8dp"
                            android:inputType="number"
                            android:fontFamily="@font/oswald_regular"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:hint="@string/collation_time_hour"/>

                        <EditText
                            android:id="@+id/create_collation_time_minute"
                            android:background="@drawable/spinner_drawable_flat"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:padding="8dp"
                            android:inputType="number"
                            android:maxLength="2"
                            android:fontFamily="@font/oswald_regular"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:hint="@string/collation_time_minute"/>

                        <EditText
                            android:id="@+id/create_collation_time_ampm"
                            android:background="@drawable/spinner_drawable_flat"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:padding="8dp"
                            android:inputType="text"
                            android:fontFamily="@font/oswald_regular"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:hint="@string/collation_time_ampm"/>

                        <ImageButton
                            android:id="@+id/create_collation_time_picker"
                            android:foreground="?attr/selectableItemBackground"
                            android:src="@drawable/ic_watch_later_black_24dp"
                            android:contentDescription="@string/aria_time"
                            android:scaleType="centerCrop"
                            android:tint="@color/colorMain"
                            android:background="@drawable/spinner_drawable_flat"
                            android:backgroundTint="@color/colorPrimary"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:padding="12dp"
                            android:elevation="4dp"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/oswald_light"
                        android:text="@string/set_exam_date"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimary" />

                    <LinearLayout
                        android:id="@+id/create_collation_exam_date"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/create_collation_date_day"
                            android:background="@drawable/spinner_drawable_flat"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:inputType="number"
                            android:padding="8dp"
                            android:fontFamily="@font/oswald_regular"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:hint="@string/collation_date_day"/>

                        <EditText
                            android:id="@+id/create_collation_date_month"
                            android:background="@drawable/spinner_drawable_flat"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:padding="8dp"
                            android:fontFamily="@font/oswald_regular"
                            android:textColor="@color/colorPrimaryDark"
                            android:inputType="number"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:hint="@string/collation_date_month"/>

                        <EditText
                            android:id="@+id/create_collation_date_year"
                            android:background="@drawable/spinner_drawable_flat"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:padding="8dp"
                            android:inputType="number"
                            android:fontFamily="@font/oswald_regular"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:hint="@string/collation_date_year"/>

                        <ImageButton
                            android:id="@+id/create_collation_date_picker"
                            android:foreground="?attr/selectableItemBackground"
                            android:src="@drawable/ic_date_range_black_24dp"
                            android:contentDescription="@string/aria_time"
                            android:scaleType="centerCrop"
                            android:tint="@color/colorMain"
                            android:background="@drawable/spinner_drawable_flat"
                            android:backgroundTint="@color/colorPrimary"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:padding="12dp"
                            android:elevation="4dp"/>

                    </LinearLayout>

                    <Button
                        android:id="@+id/create_collation_submit"
                        android:foreground="?attr/selectableItemBackground"
                        android:background="@drawable/spinner_drawable_flat"
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="16dp"
                        android:text="@string/create_collation_create"
                        android:textColor="@color/colorMain"
                        android:onClick="submitCollation"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>