<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/options_listview_layout_option"
    android:background="@drawable/round_rectangle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:clipToPadding="false"
    android:orientation="horizontal"
    android:elevation="0.5dp"
    android:gravity="center">

    <Button
        android:id="@+id/options_listview_layout_true"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/true_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/options_listview_layout_option_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_weight="6"
        android:background="@android:color/transparent"
        android:fontFamily="@font/comicneue_regular"
        android:maxLines="3"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:textAlignment="textStart"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        tools:text="@string/blob_option_text" />

    <Button
        android:id="@+id/options_listview_layout_false"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/false_text"
        android:textSize="24sp"
        android:textStyle="bold"/>

</LinearLayout>