<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="top"
    android:paddingTop="12dp"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:clipToPadding="false"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/fragment_swipe_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comicneue_light"
        android:text="@string/course"
        android:textColor="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/fragment_swipe_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_swipe_textview"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black"
        android:textStyle="normal"
        android:fontFamily="@font/oswald_semibold"
        tools:text="@string/blob_text" />

    <ListView
        android:id="@+id/fragment_swipe_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8dp"
        android:scrollbars="none"
        android:layout_above="@id/mark_button"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:clipToPadding="false"/>

    <Button
        android:id="@+id/mark_button"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@drawable/round_rectangle"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:text="@string/check_answers"
        android:textColor="@android:color/white"
        android:tint="@android:color/white"/>

</RelativeLayout>